--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.usthe</groupId>
-	<artifactId>bootshiro</artifactId>
+	<groupId>com.lots</groupId>
+	<artifactId>lotswxxw</artifactId>
 	<version>1.1.0</version>
 	<packaging>jar</packaging>
 
-	<name>bootshiro</name>
-	<description>bootshiro project for Spring Boot</description>
+	<name>lotswxxw</name>
+	<description>lotswxxw project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -188,44 +188,44 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<!-- java code style check -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<version>3.8</version>
-				<configuration>
-					<rulesets>
-						<ruleset>rulesets/java/ali-comment.xml</ruleset>
-						<ruleset>rulesets/java/ali-concurrent.xml</ruleset>
-						<ruleset>rulesets/java/ali-constant.xml</ruleset>
-						<ruleset>rulesets/java/ali-exception.xml</ruleset>
-						<ruleset>rulesets/java/ali-flowcontrol.xml</ruleset>
-						<ruleset>rulesets/java/ali-naming.xml</ruleset>
-						<ruleset>rulesets/java/ali-oop.xml</ruleset>
-						<ruleset>rulesets/java/ali-orm.xml</ruleset>
-						<ruleset>rulesets/java/ali-other.xml</ruleset>
-						<ruleset>rulesets/java/ali-set.xml</ruleset>
-					</rulesets>
-					<printFailingErrors>true</printFailingErrors>
-				</configuration>
-				<executions>
-					<execution>
-						<id>validate</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<!-- 需要使用阿里的一些xml文件，因此需要这里增加p3c的依赖 -->
-					<dependency>
-						<groupId>com.alibaba.p3c</groupId>
-						<artifactId>p3c-pmd</artifactId>
-						<version>1.3.0</version>
-					</dependency>
-				</dependencies>
-			</plugin>
+			<!--&lt;!&ndash; java code style check &ndash;&gt;-->
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-pmd-plugin</artifactId>-->
+				<!--<version>3.8</version>-->
+				<!--<configuration>-->
+					<!--<rulesets>-->
+						<!--<ruleset>rulesets/java/ali-comment.xml</ruleset>-->
+						<!--<ruleset>rulesets/java/ali-concurrent.xml</ruleset>-->
+						<!--<ruleset>rulesets/java/ali-constant.xml</ruleset>-->
+						<!--<ruleset>rulesets/java/ali-exception.xml</ruleset>-->
+						<!--<ruleset>rulesets/java/ali-flowcontrol.xml</ruleset>-->
+						<!--<ruleset>rulesets/java/ali-naming.xml</ruleset>-->
+						<!--<ruleset>rulesets/java/ali-oop.xml</ruleset>-->
+						<!--<ruleset>rulesets/java/ali-orm.xml</ruleset>-->
+						<!--<ruleset>rulesets/java/ali-other.xml</ruleset>-->
+						<!--<ruleset>rulesets/java/ali-set.xml</ruleset>-->
+					<!--</rulesets>-->
+					<!--<printFailingErrors>true</printFailingErrors>-->
+				<!--</configuration>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<id>validate</id>-->
+						<!--<phase>validate</phase>-->
+						<!--<goals>-->
+							<!--<goal>check</goal>-->
+						<!--</goals>-->
+					<!--</execution>-->
+				<!--</executions>-->
+				<!--<dependencies>-->
+					<!--&lt;!&ndash; 需要使用阿里的一些xml文件，因此需要这里增加p3c的依赖 &ndash;&gt;-->
+					<!--<dependency>-->
+						<!--<groupId>com.alibaba.p3c</groupId>-->
+						<!--<artifactId>p3c-pmd</artifactId>-->
+						<!--<version>1.3.0</version>-->
+					<!--</dependency>-->
+				<!--</dependencies>-->
+			<!--</plugin>-->
 			<!-- java doc 生成 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
