1.添加两个工具类(接口加密，合并行导入导出)

--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,18 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--用于操作excel文件-->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
