--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   port: 8080
 
 spring:
+
   datasource:
       driver-class-name: com.mysql.jdbc.Driver
       platform: mysql
@@ -102,7 +103,7 @@ spring:
     datasource:
       url: jdbc:mysql://119.23.206.234:3306/lotswxxw?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
-      password: as147852
+      password: As..147852
     redis:
       # 服务器IP地址
       host: 127.0.0.1
@@ -119,7 +120,7 @@ spring:
     datasource:
       url: jdbc:mysql://119.23.206.234:3306/lotswxxw?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
-      password: as147852
+      password: As..147852
     redis:
       # 服务器IP地址
       host: 127.0.0.1
@@ -136,7 +137,7 @@ spring:
     datasource:
       url: jdbc:mysql://119.23.206.234:3306/lotswxxw?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
-      password: as147852
+      password: As..147852
     redis:
       # 服务器IP地址
       host: 127.0.0.1
