--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,11 +38,11 @@ spring:
     # 数据库索引，默认0
     database: 0
 #    # 服务器IP地址
-#    host: 127.0.0.1
+    host: 119.23.206.234
 #    # 连接端口
-#    port: 6379
+    port: 6379
 #    # Redis服务器连接密码（默认为空）
-#    password:
+    password: as..147852
 
     jedis:
       pool:
