--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,11 +38,11 @@ spring:
     # 数据库索引，默认0
     database: 0
 #    # 服务器IP地址
-    host: 119.23.206.234
+    host: ENC(twaqcgyqUUZMfBLitLQpPHhALndTRk/f)
 #    # 连接端口
     port: 6379
 #    # Redis服务器连接密码（默认为空）
-    password: as..147852
+    password: ENC(qCh2Nc1wLkKnY74rBRlisLsWL340R157)
 
     jedis:
       pool:
@@ -93,7 +93,7 @@ pagehelper:
 
 jasypt:
   encryptor:
-    password: e!swhdg&d763jo
+    password: e!lotsbalbal
 
 
 ---
@@ -103,14 +103,14 @@ spring:
     datasource:
       url: jdbc:mysql://119.23.206.234:3306/lotswxxw?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
-      password: As..147852
+      password: ENC(IBKnbNivdT/X+cRBvV3ZibLD5X3OffvO)
     redis:
       # 服务器IP地址
-      host: 119.23.206.234
+      host: ENC(twaqcgyqUUZMfBLitLQpPHhALndTRk/f)
       # 连接端口
       port: 6379
       # Redis服务器连接密码（默认为空）
-      password: as..147852
+      password: ENC(qCh2Nc1wLkKnY74rBRlisLsWL340R157)
 
 ---
 # 测试环境配置(配置项只包括不同项)
@@ -120,14 +120,14 @@ spring:
     datasource:
       url: jdbc:mysql://119.23.206.234:3306/lotswxxw?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
-      password: As..147852
+      password: ENC(IBKnbNivdT/X+cRBvV3ZibLD5X3OffvO)
     redis:
       # 服务器IP地址
-      host: 119.23.206.234
+      host: ENC(twaqcgyqUUZMfBLitLQpPHhALndTRk/f)
       # 连接端口
       port: 6379
       # Redis服务器连接密码（默认为空）
-      password: as..147852
+      password: ENC(qCh2Nc1wLkKnY74rBRlisLsWL340R157)
 
 ---
 # 生产环境配置(配置项只包括不同项)
@@ -137,11 +137,11 @@ spring:
     datasource:
       url: jdbc:mysql://119.23.206.234:3306/lotswxxw?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
-      password: As..147852
+      password: ENC(IBKnbNivdT/X+cRBvV3ZibLD5X3OffvO)
     redis:
       # 服务器IP地址
-      host: 119.23.206.234
+      host: ENC(twaqcgyqUUZMfBLitLQpPHhALndTRk/f)
       # 连接端口
       port: 6379
       # Redis服务器连接密码（默认为空）
-      password: as..147852
+      password: ENC(qCh2Nc1wLkKnY74rBRlisLsWL340R157)
