--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.0.0.RELEASE</version>
             </plugin>
             <!-- java code style check -->
             <!--<plugin>
