--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -11,7 +11,7 @@ spring:
         exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*" #不统计这些请求数据
       stat-view-servlet: #访问监控网页的登录用户名和密码
         login-username: druid
-        login-password: Lotsy..147852
+        login-password: 123445
   redis:
     host: localhost # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
